[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "^1.0"
cached = "0.40"
itertools = "^0.10"
nom = "7.1"
paste = "^1.0.6"
sealed = "0.4"
smallvec = "1.10"
snafu = { version = "0.7.3", features = ["rust_1_61"] }
