[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
bitvec = "^1.0"
cached = "0.40"
indicatif = "0.17.7"
itertools = "^0.10"
nom = { version = "7.1", features = ["std"] }
num = "0.4.1"
paste = "^1.0.6"
sealed = "0.4"
smallvec = "1.10"
snafu = { version = "0.7.3", features = ["rust_1_61"] }
